to correct spring config

--- a/src/main/resources/config/bootstrap.yml
+++ b/src/main/resources/config/bootstrap.yml
@@ -23,4 +23,5 @@ spring:
       name: Test
       profile: dev # profile(s) of the property source
       label: master # toggle to switch to a different version of the configuration as stored in git
+      enabled: false
       # it can be set to any label, branch or commit of the configuration source Git repository
