--- a/src/main/resources/config/application-prod.yml
+++ b/src/main/resources/config/application-prod.yml
@@ -35,6 +35,7 @@ spring:
     mongodb:
       uri: mongodb://localhost:27017
       database: Test
+      auto-index-creation: false
   mail:
     host: localhost
     port: 25
