--- a/src/test/resources/config/application.yml
+++ b/src/test/resources/config/application.yml
@@ -24,6 +24,7 @@ spring:
       host: localhost
       port: 0
       database: Test
+      auto-index-creation: false
   mail:
     host: localhost
   main:
