to modifiy auto-index-creation: false mongodb

--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -47,6 +47,7 @@ spring:
     mongodb:
       uri: mongodb://localhost:27017
       database: jhipsterSampleApplication
+      auto-index-creation: false
   mail:
     host: localhost
     port: 25
