--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -45,7 +45,7 @@ spring:
       indent-output: true
   data:
     mongodb:
-      uri: mongodb://localhost:27017
+      uri: mongodb://localhost:27017/?readPreference=primary&appname=MongoDB%20Compass&ssl=false
       database: jhipsterSampleApplication
       auto-index-creation: false
   mail:
